PE Clustering - R code
Initial commit of datarobot.pe.clustering R package

Add readme, contributing, and code of conduct stubs

Prepare for release

Bug Fixes: Datasets without target, requesting few features

Now target is no longer required in the dataset
Now number of feature summarizations will actually reflect the requested number if it is fewer than the available features

Update title and version

Add additional results output, update documentation

Expand size of vignette plot

Update required datarobot version and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+# Mac OS folder information
+.DS_Store
+
+# Preview/knitting of README markdown
+README.html
+
+# Further R package
+.gitignore
+inst/doc
+doc
+Meta
